--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Using Gulp.js for CSS tasks</title>
-  <link rel="stylesheet" media="all" href="build/css/main.css">
+  <link rel="stylesheet" media="all" href="build/assets/css/main.css">
 </head>
 <body>
 
   <h1>My example page</h1>
 
+  <script src="build/assets/js/index.js"></script>
 </body>
 </html>
