--- a/pages/pages/about.html
+++ b/pages/pages/about.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: YAML Front Matter
+layout: post
+title: About
 description: A very simple way to add structured data to a page.
 ---
 
