--- a/pages/pages/index.html
+++ b/pages/pages/index.html
@@ -3,4 +3,20 @@ title: YAML Front Matter
 description: A very simple way to add structured data to a page.
 ---
 
-<p>This is index page...</p>
+<section>
+  <article>
+    <h2>
+      <a href="/posts/my-first-post.html">
+        My JavaScripts
+      </a>
+    </h2>
+    <p>Sam tried another path and got pretty fancy. Here, he creates an <code>iframe</code> (so there is no interfering styles), inserts a button element (which should have the system font on it by default), and tests the styles on it.</p>
+  </article>
+</section>
+
+<section>
+  <article>
+    <h2>My first post</h2>
+    <p>Sam tried another path and got pretty fancy. Here, he creates an <code>iframe</code> (so there is no interfering styles), inserts a button element (which should have the system font on it by default), and tests the styles on it.</p>
+  </article>
+</section>
