--- a/pages/pages/about.html
+++ b/pages/pages/about.html
@@ -7,7 +7,7 @@ description: My name is Putu Harum Bawa, a front end developer.
 <p>
 <img
   class="c-avatar"
-  src="/assets/images/harum_avatar.webp"
+  src="/assets/images/harum_avatar.jpg"
   alt="Putu Harum Bawa"
 >
 Hello. My name is Putu Harum Bawa. I am from Bali, but currently working in
